--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.13.0",
     "@types/adm-zip": "^0.5.7",
+    "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/multer": "^1.4.13",
     "adm-zip": "^0.5.16",
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "multer": "^2.0.1",
